OSMO_GSM_MANUALS_DIR = ..

ASCIIDOC = osmoggsn-usermanual.adoc
ASCIIDOC_DEPS = chapters/*.adoc
include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.asciidoc.inc

VTY_REFERENCE = osmoggsn-vty-reference.xml
include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.vty-reference.inc

include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.common.inc
