OSMO_GSM_MANUALS_DIR = $(top_srcdir)
EXTRA_DIST = osmo-gsm-tester-manual.adoc \
	osmo-gsm-tester-manual-docinfo.xml \
	chapters

ASCIIDOC = osmo-gsm-tester-manual.adoc
ASCIIDOC_DEPS = $(srcdir)/chapters/*.adoc
include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.asciidoc.inc

include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.common.inc
