OSMO_GSM_MANUALS_DIR = ..

ASCIIDOC = osmonitb-usermanual.adoc
ASCIIDOC_DEPS = chapters/*.adoc
include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.asciidoc.inc

VTY_REFERENCE = osmonitb-vty-reference.xml
include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.vty-reference.inc

include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.common.inc
